codepkg/objects/Community_Application_to_User__c.object
<CustomObject>
    <fields>
        <fullName>App_Name__c</fullName>
        <formula>Community_Application__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>App Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Community Application</label>
        <referenceTo>Community_Application__c</referenceTo>
        <relationshipLabel>Community Application to Users</relationshipLabel>
        <relationshipName>Community_Application_to_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Community Application to Users</relationshipLabel>
        <relationshipName>Community_Application_to_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Post_Active_Actions__c</fullName>
        <description>Post User assignment actions in json format</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Example - 
[{
&apos;action&apos;:&apos;ShareProject&apos;,
&apos;value&apos;:&apos;IdValue&apos;
}]</inlineHelpText>
        <label>Post Active Actions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Community_Application_to_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <label>Community Application to User</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Community_Application__c</columns>
        <columns>User__c</columns>
        <columns>Contact__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CAU-{00000000}</displayFormat>
        <label>Community Application to User Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Community Application to Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>